<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10sp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutConfirmNumber"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_horizontal"
                        android:text="@string/confirmation"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="24dp"
                    android:gravity="center_vertical">


                    <TextView
                        android:id="@+id/tvConfirmText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/purple_200"
                        android:textSize="14sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:weightSum="2">


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnChange"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10sp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:elevation="5dp"
                        android:text="@string/change"
                        android:textColor="@color/purple_200"
                        android:textSize="14sp" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnShare"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10sp"
                        android:layout_weight="1"
                        android:background="@color/purple_200"
                        android:elevation="5dp"
                        android:text="@string/share"
                        android:textColor="@color/white"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutChangeNumber"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif"
                        android:gravity="center_horizontal"
                        android:text="@string/change_your_whatsapp_no"
                        android:textColor="@color/purple_200"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18sp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="18sp"
                    android:gravity="center_vertical">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etWhats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_border_edittext"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical"
                        android:hint="@string/whatsapp_no"
                        android:textColorHint="@color/black"
                        android:digits="0123456789+-*/"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvErrMsg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_vertical"
                        android:text="@string/please_remove_91"
                        android:textColor="@color/purple_700"
                        android:textSize="10sp"
                        android:visibility="gone" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:weightSum="2">


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10sp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:elevation="5dp"
                        android:text="@string/cancel"
                        android:textColor="@color/purple_200"
                        android:textSize="14sp" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnConfirm"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10sp"
                        android:layout_weight="1"
                        android:background="@color/purple_200"
                        android:elevation="5dp"
                        android:text="@string/confirm"
                        android:textColor="@color/white"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
